--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -15,38 +15,39 @@ RUN apk update \
     && cp /usr/share/zoneinfo/${TIMEZONE} /etc/localtime \
     && echo "${TIMEZONE}" > /etc/timezone \
     && apk add --no-cache --virtual --update \
-    php5 \ 
-    php5-apcu \ 
-    php5-bcmath \ 
+    php5 \
+    php5-apcu \
+    php5-bcmath \
     php5-bz2 \
     php5-cli \
-    php5-ctype \ 
-    php5-curl \ 
+    php5-ctype \
+    php5-curl \
     php5-dom \
     php5-exif \
     php5-gd \
-    php5-gettext \ 
-    php5-iconv \ 
-    php5-intl \ 
-    php5-json \ 
+    php5-gettext \
+    php5-iconv \
+    php5-intl \
+    php5-json \
     php5-mcrypt \
     php5-mysql \
-    php5-mysqli \ 
-    php5-openssl \ 
-    php5-pcntl \ 
-    php5-pdo_mysql \ 
-    php5-pdo_pgsql \ 
-    php5-pdo_sqlite \ 
-    php5-phar \ 
-    php5-posix \ 
+    php5-mysqli \
+    php5-openssl \
+    php5-pcntl \
+    php5-pdo_mysql \
+    php5-pdo_pgsql \
+    php5-pdo_sqlite \
+    php5-phar \
+    php5-posix \
     php5-soap \
     php5-xmlreader \ 
     php5-xmlrpc \
     php5-xsl \
-    php5-zip \ 
-    php5-zlib \ 
+    php5-zip \
+    php5-zlib \
     ca-certificates \
     openssh \
+    curl \
     && curl -fsSL https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini-static -o /sbin/tini && chmod +x /sbin/tini \
     && echo "${TINI_SHA}  /sbin/tini" | sha1sum -wc - \
     && sed -i "s|;*date.timezone =.*|date.timezone = ${TIMEZONE}|i" /etc/php5/php.ini \
