Make php excutable

--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -56,6 +56,7 @@ RUN apk update \
     && sed -i "s|;*max_file_uploads =.*|max_file_uploads = ${PHP_MAX_FILE_UPLOAD}|i" /etc/php5/php.ini \
     && sed -i "s|;*post_max_size =.*|post_max_size = ${PHP_MAX_POST}|i" /etc/php5/php.ini \
     && sed -i "s|;*cgi.fix_pathinfo=.*|cgi.fix_pathinfo= 0|i" /etc/php5/php.ini \
+    && ln -s /usr/bin/php5 /usr/bin/php \
     && apk del tzdata \
     && rm -rf /var/cache/apk/* \
     && rm -rf /var/lib/apt/lists/* \
